k8s/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
  namespace: buymystuffapp
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
    cert-manager.io/cluster-issuer: issuer-prod
spec:
  tls:
    - hosts:
        - buymystuffapp.com
        - www.buymystuffapp.com
      secretName: buymystuffapp-com
  rules:
    - http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: web-client-clusterip
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: api-gateway-clusterip
              servicePort: 5000
    - host: buymystuffapp.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: web-client-clusterip
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: api-gateway-clusterip
              servicePort: 5000
    - host: www.buymystuffapp.com
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: web-client-clusterip
              servicePort: 3000
          - path: /api/?(.*)
            backend:
              serviceName: api-gateway-clusterip
              servicePort: 5000
